Fix Poplar Insights form label for errors still not showing proper stylings

--- a/src/assets/scss/components/form_insights/form_insights.scss
+++ b/src/assets/scss/components/form_insights/form_insights.scss
@@ -7,20 +7,18 @@ ol {
 }
 label {
   margin-bottom: 0;
-  .hs {
-    &-error-msgs {
-      color: red;
-    }
-    &-error-msg {
-      font-size: 0.75rem;
-      font-weight: 700;
-      line-height: 1em;
-      color: red;
-    }
-  }
 }
 
 .hs {
+  &-error-msgs {
+    color: red;
+  }
+  &-error-msg {
+    font-size: 0.75rem;
+    font-weight: 700;
+    line-height: 1em;
+    color: red;
+  }
   &-main-font-element {
     h1 {
       line-height: 1.5rem;
